--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/fraday/WebserverAssignment#readme",
   "dependencies": {
     "express": "^4.17.3",
-    "http": "0.0.1-security"
+    "http": "0.0.1-security",
+    "nodemailer": "^6.7.3"
   }
 }
